--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
         <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
         <!-- FontAwesome -->
-        <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css">
-
-        <!-- Nivo Lightbox-->
-        <link rel="stylesheet" href="assets/plugins/nivo-lightbox/nivo-lightbox.css" />
-        <link rel="stylesheet" href="assets/plugins/nivo-lightbox/themes/default/default.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!-- Main CSS -->
         <link rel="stylesheet" href="assets/css/main.css">
@@ -33,16 +29,7 @@
         <!--<link rel="stylesheet" href="assets/css/custom.css">-->
 
         <!-- jQuery -->
-        <script src="assets/js/jquery.min.js"></script>
-
-        <!-- dense.js (Retina plugin) -->
-        <script src="assets/js/dense.js"></script>
-
-        <!-- Nivo Lightbox -->
-        <script src="assets/plugins/nivo-lightbox/nivo-lightbox.min.js"></script>
-
-        <!-- ScrollReveal -->
-        <script src="assets/js/scrollreveal.min.js"></script>
+        <script   src="https://code.jquery.com/jquery-3.3.1.js"   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="   crossorigin="anonymous"></script>
 
         <!-- Main JS -->
         <script src="assets/js/main.js"></script>
@@ -113,7 +100,7 @@
 
                                         <ul class="c-header__social-buttons  c-social-buttons">
                                             <li class="a-header">
-                                                <a href="https://github.com/r0ehre" target="_blank" class="c-social-button  t-social-button">
+                                                <a href="https://github.com/TobiasRoeddiger" target="_blank" class="c-social-button  t-social-button">
                                                     <i class="fa  fa-lg  fa-github"></i>
                                                 </a>
                                             </li>
