--- a/gather-demo.html
+++ b/gather-demo.html
@@ -1,2 +1,7 @@
 <html>
+    <body>
+        <iframe style="width: 100vw; height: 100vh;" src="https://google.com">
+
+        </iframe>
+    </body>
 </html>
