--- a/gather-demo.html
+++ b/gather-demo.html
@@ -1,6 +1,8 @@
 <html>
     <body>
-        <iframe style="width: 100vw; height: 100vh;" src="https://google.com">
+        <button>Location 1</button>
+        <button>Location 2</button>
+        <iframe style="width: 100%; height: 100%;" src="https://google.com">
 
         </iframe>
     </body>
