--- a/gather-demo.html
+++ b/gather-demo.html
@@ -2,7 +2,7 @@
     <body>
         <button>Location 1</button>
         <button>Location 2</button>
-        <iframe style="width: 100%; height: 100%;" src="https://google.com">
+        <iframe style="width: 100%; height: 100%;" src="https://gather.town/app/3MbcZp7uyEtB60z3/locationtest">
 
         </iframe>
     </body>
