--- a/gather-demo.html
+++ b/gather-demo.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body style="margin: 0px;"
         <div stlye="display: flex;">
             <div style="width: 20%; max-width: 200px;">
                 <button onclick="location1()">Location 1</button>
