--- a/gather-demo.html
+++ b/gather-demo.html
@@ -1,12 +1,12 @@
 <html>
     <body style="margin: 0px;"
         <div stlye="display: flex;">
-            <div style="width: 20%; max-width: 200px;">
+            <div style="width: 20%;">
                 <button onclick="location1()">Location 1</button>
                 <button onclick="location2()">Location 2</button>
             </div>
             
-            <iframe id="gather" style="width: 80%; height: 100%; border: 0;" frameBorder="0" src="https://gather.town/app/3MbcZp7uyEtB60z3/locationtest">
+            <iframe id="gather" style="width: 100%; height: 100%; border: 0;" frameBorder="0" src="https://gather.town/app/3MbcZp7uyEtB60z3/locationtest">
     
             </iframe>
         </div>
