--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
                                                         <span class="c-brand__sizer">
                                                             go and have a look at my <a href="assets/documents/resume.pdf">resume</a> </br>
                                                         </span>
+                                                    <br/>
+                                                    Want to hear about the future of earables? <a href="https://teco.edu/people/roeddiger/">Let me be your next keynote speaker.</a>
                                                     </h2>
                                                 </hgroup>
                                             </div><!-- /c-brand -->
