--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                                     </h1>
                                                     <h2 class="a-header  c-brand__sub-title  t-sub-title">
                                                         <span class="c-brand__sizer">
-                                                            go and have a look at my <a href="assets/documents/resume.pdf">resume</a> </br>
+                                                            go and have a look at my <a href="assets/documents/academic-cv.pdf">academic CV</a> </br>
                                                         </span>
                                                     <br/>
                                                    </h2>
@@ -129,8 +129,7 @@
 
                                     </div><!-- /c-header__top -->
 
-                                     Want to hear about the future of earables? <a href="https://teco.edu/people/roeddiger/">Let me be your next keynote speaker.</a>
-                                                    
+                                       
                                 </div><!-- /c-header__inner-content -->
                             </div><!-- /c-section__content -->
 
